src/objects/Case.object
<CustomObject>
    <!--App Casos-->
    <businessProcesses>
        <fullName>Proceso de Soporte para Incidentes DWP</fullName>
        <description>Proceso de Soporte para dar de alta incidentes dentro de la aplicación de DWP Retail</description>
        <isActive>true</isActive>
        <values>
            <fullName>Análisis</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En Espera de Insumos</fullName>
        </values>
        <values>
            <fullName>Resolución</fullName>
        </values>
        <values>
            <fullName>Cerrado</fullName>
        </values>
    </businessProcesses>
    <!--App Casos-->
    <businessProcesses>
        <fullName>Apoyo de Visita</fullName>
        <description>Proceso de soporte para apoyos orientados a visitas.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Abierto</fullName>
        </values>
        <values>
            <fullName>Solicitada</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Apoyos</fullName>
        <description>Nuevo proceso de soporte para Apoyos.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Abierto</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Descartado</fullName>
        </values>
        <values>
            <fullName>Hecho</fullName>
        </values>
        <values>
            <fullName>Vencido</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Carterización PyME</fullName>
        <description>Proceso de soporte para carterización PyME</description>
        <isActive>true</isActive>
        <values>
            <fullName>Aprobada</fullName>
        </values>
        <values>
            <fullName>Rechazada</fullName>
        </values>
        <values>
            <fullName>Solicitada</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>MX_RTE</fullName>
        <description>Etapas utilizadas para el Work Flow RTE</description>
        <isActive>true</isActive>
        <values>
            <fullName>Backlog</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Descartado</fullName>
        </values>
        <values>
            <fullName>En Desarrollo</fullName>
        </values>
        <values>
            <fullName>Terminado</fullName>
        </values>
        <values>
            <fullName>Validación Portafolio</fullName>
        </values>
        <values>
            <fullName>Valoración</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>MX_WF_Gestion_Incidencias_Implementacion</fullName>
        <description>Proceso de Soporte para las Incidencias del área Implementación Comercial en el Workflow de Campañas</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cerrado</fullName>
        </values>
        <values>
            <fullName>Ejecución</fullName>
        </values>
        <values>
            <fullName>Rechazada</fullName>
        </values>
        <values>
            <fullName>Sin asignar</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Seguros SAC</fullName>
        <description>Este proceso es para los flujos de soporte</description>
        <isActive>true</isActive>
        <values>
            <fullName>Aceptado</fullName>
        </values>
        <values>
            <fullName>Cerrado</fullName>
        </values>
        <values>
            <fullName>Ejecución de tramite</fullName>
        </values>
        <values>
            <fullName>En espera del tramite</fullName>
        </values>
        <values>
            <fullName>Identificación de cliente</fullName>
        </values>
        <values>
            <fullName>Integración de documentos</fullName>
        </values>
        <values>
            <fullName>Nuevo</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Venta</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Siniestros</fullName>
        <description>Toma de reportes</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cerrado</fullName>
        </values>
        <values>
            <fullName>Nuevo</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <!--App Casos-->
    <!--App Casos-->
    <fields>
        <fullName>MX_RTE_KPIs__c</fullName>
        <description>Campo para señalar los KPIs competentes para la Feature.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>KPIs</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alerta_Generada__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Se Activa si la alerta se ha generado correctamente</description>
        <inlineHelpText>Se Activa si la alerta se ha generado correctamente</inlineHelpText>
        <label>Alerta Generada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apoyo_Visita__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check para determinar si este caso es un apoyo generado desde la visita.</description>
        <label>Apoyo Visita</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AP_ls_BancaReceptora__c</fullName>
        <label>Banca Receptora</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comercial</fullName>
                </value>
                <value>
                    <fullName>Corporativa</fullName>
                </value>
                <value>
                    <fullName>PyME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AP_ls_ConservaCliente__c</fullName>
        <description>Campo que indica si el ejecutivo mantiene al cliente en su cartera</description>
        <label>¿El ejecutivo conserva el cliente?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AP_ls_Tipo__c</fullName>
        <description>Campo para especificar si es un caso entre Unidad Gestora o entre Centro Regional.</description>
        <inlineHelpText>Si es entre CR’s adjuntar formato de ajuste de presupuesto, aún y cuando este en
ceros.</inlineHelpText>
        <label>Tipo AP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CR</fullName>
                </value>
                <value>
                    <fullName>UG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AP_tx_NombreEjecutivo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre del Ejecutivo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_InformacionGeneral__c</fullName>
        <description>Campo formula para concatenar el numero de poliza y titular de la poliza</description>
        <formula>&apos;Número de Póliza: &apos; + MX_SB_SAC_Contrato__r.MX_WB_noPoliza__c + &apos; | &apos; + &apos;Nombre: &apos; +  MX_SB_SAC_Contrato__r.MX_SB_SAC_NombreCuenta__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Información General</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Movimiento__c</fullName>
        <description>Esta lista identifica el movimiento de la devolución</description>
        <label>Movimiento</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MX_SB_SAC_AplicaDevolucion__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Devolución</fullName>
                    <default>true</default>
                    <label>Devolución</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_OtrosDocumentos__c</fullName>
        <description>Campo que se ocupara para el BO, cuando se requiera documentación espacial que no se encuentre el campo de multi-selección de documentos requeridos por el cliente</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Otros documentos</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente_Intrusion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Casos (Cliente)</relationshipLabel>
        <relationshipName>Casos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_rb_nombreEjecutivo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nombre Ejecutivo</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Casos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_tx_numeroCliente__c</fullName>
        <description>Definición de campos personalizados para el proceso de Recarterización</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Número Cliente</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descripci_n_del_requerimiento__c</fullName>
        <description>Campo para agregar la descripción del requerimiento del caso levantado</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Descripción del requerimiento</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Detalle_de_soluci_n__c</fullName>
        <description>Guarda el detalle de la solución</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Escriba el detalle de la solución del hallazgo</inlineHelpText>
        <label>Detalle de solución</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EstadoSistema__c</fullName>
        <label>EstadoSistema</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abierto</fullName>
                    <default>true</default>
                    <label>Abierto</label>
                </value>
                <value>
                    <fullName>Cerrado</fullName>
                </value>
                <value>
                    <fullName>Ejecutar detalles de caso</fullName>
                </value>
                <value>
                    <fullName>En aprobación</fullName>
                </value>
                <value>
                    <fullName>En espera de documentos</fullName>
                </value>
                <value>
                    <fullName>En retención</fullName>
                </value>
                <value>
                    <fullName>En validación PU</fullName>
                </value>
                <value>
                    <fullName>En validación Siniestro</fullName>
                </value>
                <value>
                    <fullName>Para aplicar cobro por cobranza</fullName>
                </value>
                <value>
                    <fullName>Para aplicar devolución</fullName>
                </value>
                <value>
                    <fullName>Revisión de caso por Back Office</fullName>
                </value>
                <value>
                    <fullName>Validación de Identidad Pendiente</fullName>
                </value>
                <value>
                    <fullName>Primer contacto</fullName>
                </value>
                <value>
                    <fullName>Segundo Contacto</fullName>
                </value>
                <value>
                    <fullName>Tercer Contacto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EU001_fh_Fecha_propuesta_de_cierre__c</fullName>
        <description>Fecha Propuesta de cierre Experiencia única</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha propuesta de cierre</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU001_ls_Tipo_de_apoyo__c</fullName>
        <description>Tipo de apoyo para experiencia unica</description>
        <label>Tipo de apoyo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proceso de crédito</fullName>
                </value>
                <value>
                    <fullName>Producto</fullName>
                </value>
                <value>
                    <fullName>Capacitación</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Visitas</fullName>
                </value>
                <value>
                    <fullName>IReNe</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>Capacitación a Oficina / Ejecutivo</fullName>
                </value>
                <value>
                    <fullName>Capacitación al Cliente</fullName>
                </value>
                <value>
                    <fullName>Cotización de Producto</fullName>
                </value>
                <value>
                    <fullName>Manejo de Objeción con el Cliente</fullName>
                </value>
                <value>
                    <fullName>Presentación de Producto</fullName>
                </value>
                <value>
                    <fullName>Apoyo General</fullName>
                </value>
                <value>
                    <fullName>Apoyo de Oportunidad</fullName>
                </value>
                <value>
                    <fullName>Apoyo de Alerta CRM</fullName>
                </value>
                <value>
                    <fullName>Apoyo de Propuesta Comercial</fullName>
                </value>
                <value>
                    <fullName>Apoyo de Plan de Cuenta</fullName>
                </value>
                <value>
                    <fullName>Apoyo de Caso</fullName>
                </value>
                <value>
                    <fullName>Análisis de crédito</fullName>
                    <isActive>false</isActive>
                    <label>Análisis de crédito</label>
                </value>
                <value>
                    <fullName>Plan de Cuenta</fullName>
                    <isActive>false</isActive>
                    <label>Plan de Cuenta</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EU001_Rb_Corresponsable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campos de Búsqueda de Personas, las personas seleccionadas deberán ser notificadas</description>
        <label>Corresponsable BBVA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Casos4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EU001_Rb_Oportunidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relación a Oportunidad Experiencia única</description>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Casos2</relationshipLabel>
        <relationshipName>Casos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fecha_de_cierre_prevista__c</fullName>
        <description>Fecha de cierre prevista</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de cierre prevista</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_EU_Apoyo_cliente__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo que determina si el Apoyo es creado desde un cliente.</description>
        <label>Apoyo cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_EU_Apoyo_oportunidad__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo que determina si el Apoyo es creado desde una oportunidad.</description>
        <label>Apoyo oportunidad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_EU_Caso_Dia_Inhabil__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check para determinar si es un día inhabil y no contemplarlos en el conteo de días de la atención del apoyo.</description>
        <label>¿Día inhábil?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Division__c</fullName>
        <description>Campo para guardar la división del ejecutivo a quien se le está aplicando una recarterización o traspaso</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>División del ejecutivo PyME destino</inlineHelpText>
        <label>División destino</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Division_origen__c</fullName>
        <description>Campo para guardar la división del ejecutivo a donde se aplicará una recarterización o traspaso</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>División del ejecutivo PyME origen</inlineHelpText>
        <label>Division origen</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Nombre_del_ejecutivo_origen__c</fullName>
        <description>Ejecutivo origen PYME</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Nombre del ejecutivo quien entrega el traspaso</inlineHelpText>
        <label>Nombre del ejecutivo origen</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Traspaso_entre_divisiones__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Casilla para indicar si la recarterización a realizarse sera entre ejecutivos que pertenecen a diferentes divisiones</description>
        <inlineHelpText>El traspaso se hará entre ejecutivos ubicados en diferentes divisiones</inlineHelpText>
        <label>Traspaso divisional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_PyME_UG__c</fullName>
        <description>UG de ejecutivo PyME a quien se realizara la recarterización</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>UG del ejecutivo PyME</inlineHelpText>
        <label>UG destino</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Agrupador__c</fullName>
        <description>Concatena: Ponderación Stake Holder + CAPEX + OPEX + Ranking banco</description>
        <formula>TEXT(MX_RTE_Ponderacion__c*100)&amp;&apos;% - CAPEX: &apos; &amp;
 TEXT(ROUND((MX_RTE_Capex__c/1000),0)) &amp; &apos;K - OPEX: &apos; &amp;
 TEXT(ROUND((MX_RTE_OPEX_Final__c/1000),0)) &amp; &apos;K - Ranking: &apos; &amp;
 TEXT(MX_RTE_Ranking_Banco__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agrupador</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Alcance_Final__c</fullName>
        <description>Alcance logrado al final del feature.</description>
        <label>Alcance Final</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actividad(AD)</fullName>
                </value>
                <value>
                    <fullName>Entornos Previos(EP)</fullName>
                </value>
                <value>
                    <fullName>Liga Oculta(LO)</fullName>
                </value>
                <value>
                    <fullName>Piloto(PLTO)</fullName>
                </value>
                <value>
                    <fullName>Friends &amp; Family(F&amp;F)</fullName>
                </value>
                <value>
                    <fullName>Producción(PCCION)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Alcance_Global_Local__c</fullName>
        <label>Alcance (Global / Local)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Alcance_Pre__c</fullName>
        <description>Alcance estimado al iniciar la campaña.</description>
        <inlineHelpText>AD:No Producción/No Pruebas
EP:Validada/Aceptada x PO Calidad o Test
LO:Producción.Sin acceso cliente
PLTO:Producción.Cliente Acotado (Sucursales/Cajeros)
F&amp;F:Producción.Cliente Acotado (EmpleadosDeBanco)
PCCION:Producción.Todos los clientes/Usuarios</inlineHelpText>
        <label>Alcance Preeliminar</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actividad(AD)</fullName>
                </value>
                <value>
                    <fullName>Entornos Previos(EP)</fullName>
                </value>
                <value>
                    <fullName>Liga Oculta(LO)</fullName>
                </value>
                <value>
                    <fullName>Piloto(PLTO)</fullName>
                </value>
                <value>
                    <fullName>Friends &amp; Family(F&amp;F)</fullName>
                </value>
                <value>
                    <fullName>Producción(PCCION)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Aprobaci_n_Pent_gono__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo que se actualiza a checked cuando se tiene la aprobación de RCI, IC, CCC, UX, RTE ASSIGNEE.</description>
        <label>Aprobación Pentágono</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Aprobacion_Portafolio_vista__c</fullName>
        <label>Aprobación Portafolio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aprobar</fullName>
                </value>
                <value>
                    <fullName>Rechazar</fullName>
                </value>
                <value>
                    <fullName>Backlog</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Aprobacion_Product_Owner__c</fullName>
        <label>Validación Product Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Validación Product Owner</fullName>
                </value>
                <value>
                    <fullName>Ok</fullName>
                </value>
                <value>
                    <fullName>No Procede</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Aprobacion_Stakeholder__c</fullName>
        <label>Validación Stakeholder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Validación Stakeholder</fullName>
                </value>
                <value>
                    <fullName>Ok</fullName>
                </value>
                <value>
                    <fullName>No Procede</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Capex__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Campo que se necesita para poder capturar el CAPEX inicial de cada Feature</description>
        <label>CAPEX Solicitado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Canal__c</fullName>
        <description>Campo para seleccionar el canal que se le desea asociar a la feature.</description>
        <label>Canal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>Bcom</fullName>
                    <label>bbva.mx (Bcom)</label>
                </value>
                <value>
                    <fullName>Bmovil</fullName>
                    <label>BBVA México (Bmovil)</label>
                </value>
                <value>
                    <fullName>EECC</fullName>
                </value>
                <value>
                    <fullName>Apps verticales</fullName>
                </value>
                <value>
                    <fullName>Terminal Financiero</fullName>
                </value>
                <value>
                    <fullName>CCD</fullName>
                </value>
                <value>
                    <fullName>BBVA Negocios (Net Cash)</fullName>
                </value>
                <value>
                    <fullName>AACC (Areas centrales)</fullName>
                </value>
                <value>
                    <fullName>TPV</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Host to Host</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>BBVA MX</fullName>
                    <isActive>false</isActive>
                    <label>BBVA MX</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_CAPEX_Final__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Campo para registrar el CAPEX Final, necesario para crear una iniciativa.</description>
        <label>CAPEX Dotado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Catalogo_De_Areas__c</fullName>
        <description>Campo de lista de selección, en que se selecciona el área.</description>
        <label>Catalogo de áreas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ej,a</fullName>
                </value>
                <value>
                    <fullName>Ej,b</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Clave_Jira__c</fullName>
        <description>No migrar</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Clave Jira</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Comentario_RCA__c</fullName>
        <description>Campo para describir por qué la Feature es &quot;Sin Impacto&quot;</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe por qué la Feature es &quot;Sin Impacto&quot;</inlineHelpText>
        <label>Comentario RCA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Comentarios_CCC__c</fullName>
        <description>Campo para describir por qué la Feature es &quot;Sin Impacto&quot;</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe por qué la Feature es &quot;Sin Impacto&quot;</inlineHelpText>
        <label>Comentarios CCC</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Comentarios_IC__c</fullName>
        <description>Campo para describir por qué la Feature es &quot;Sin Impacto&quot;</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe por qué la Feature es &quot;Sin Impacto&quot;</inlineHelpText>
        <label>Comentarios Implementación Comercial</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Dependencia_01__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dependencia 01</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Dependencia_02__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dependencia 02</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Dependencia_03__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dependencia 03</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_AplicaDevolucion__c</fullName>
        <description>Este campo ayuda a identificar el proceso de devolución en una cancelación o Endoso</description>
        <label>Aplíca Devolución</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Especifica_otro_tipo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Especifica otro tipo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Especifique_otro_canal__c</fullName>
        <description>Campo para describir qué otro canal, si se eligió &quot;Otro&quot; en canal.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Especifique otro canal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Estatus__c</fullName>
        <description>No migrar</description>
        <label>Estatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>En validación</fullName>
                </value>
                <value>
                    <fullName>Comprometida</fullName>
                </value>
                <value>
                    <fullName>Backlog</fullName>
                </value>
                <value>
                    <fullName>Descartada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>